<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="auto"
    android:background="#CAEACB"
    tools:context=".signup">

    <ImageView
        android:id="@+id/pas_logo2"
        android:layout_width="44dp"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/abc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/password_signup"
        app:layout_constraintHorizontal_bias="0.857"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_signup"
        app:layout_constraintVertical_bias="0.002"
        app:srcCompat="@drawable/ic_password_ico" />

    <ImageView
        android:id="@+id/pas_logo3"
        android:layout_width="44dp"
        android:layout_height="46dp"
        android:layout_marginStart="40dp"
        android:contentDescription="@string/abc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/confirmpassword"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pas_logo2"
        app:layout_constraintVertical_bias="0.064"
        app:srcCompat="@drawable/ic_password_ico" />

    <ImageView
        android:id="@+id/username_signup"
        android:layout_width="43dp"
        android:layout_height="44dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="484dp"
        android:contentDescription="@string/ert"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/username2"
        app:layout_constraintHorizontal_bias="0.416"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/username2"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_user"
        tools:ignore="UnknownId" />

    <EditText
        android:id="@+id/email"
        android:layout_width="250dp"
        android:layout_height="49dp"
        android:layout_marginTop="19dp"
        android:backgroundTint="#000000"
        android:contentDescription="@string/date_of_birth"

        android:ems="10"
        android:hint="@string/email2"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:shadowColor="#070606"
        android:textColor="@color/black"
        android:textColorHighlight="@color/black"
        android:textColorHint="#656765"
        android:textColorLink="@color/black"
        android:textCursorDrawable="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.627"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmpassword"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="EditableContentDescCheck" />

    <EditText
        android:id="@+id/password_signup"
        android:layout_width="250dp"
        android:layout_height="49dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#000000"
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:shadowColor="#070606"
        android:textColor="@color/black"
        android:textColorHighlight="@color/black"
        android:textColorHint="#656765"
        android:textColorLink="@color/black"
        android:textCursorDrawable="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/pas_logo2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.614"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username2"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/username2"
        android:layout_width="250dp"
        android:layout_height="49dp"
        android:layout_marginTop="44dp"
        android:backgroundTint="#000000"
        android:ems="10"
        android:hint="@string/username"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:shadowColor="#070606"
        android:textColor="@color/black"
        android:textColorHighlight="@color/black"
        android:textColorHint="#656765"
        android:textColorLink="@color/black"
        android:textCursorDrawable="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.614"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/confirmpassword"
        android:layout_width="252dp"
        android:layout_height="51dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#000000"
        android:ems="10"
        android:hint="@string/confirm_password2"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:shadowColor="#070606"
        android:textColor="@color/black"
        android:textColorHighlight="@color/black"
        android:textColorHint="#656765"
        android:textColorLink="@color/black"
        android:textCursorDrawable="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/pas_logo3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.622"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_signup"
        app:layout_constraintVertical_bias="0.375"
        tools:ignore="TextContrastCheck" />

    <View
        android:id="@+id/view"
        android:layout_width="415dp"
        android:layout_height="125dp"
        android:background="#78D58E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/signuptitle"
        android:layout_width="259dp"
        android:layout_height="35dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/create_new_account"
        android:textColor="#050505"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.222"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.838" />

    <TextView
        android:id="@+id/back"
        android:layout_width="83dp"
        android:layout_height="49dp"
        android:background="#366CC870"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:fontFamily="@font/allerta_stencil"
        android:text="@string/backbtn"
        android:textColor="#0E0909"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.324" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="44dp"
        android:layout_height="45dp"
        android:contentDescription="@string/imageOfEmail"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/email"
        app:layout_constraintHorizontal_bias="0.83"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pas_logo3"
        app:layout_constraintVertical_bias="0.071"
        app:srcCompat="@drawable/email_foreground" />

    <CheckBox
        android:id="@+id/agree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginBottom="136dp"
        android:text="@string/i_have_accepted_the_terms_and_conditions"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateofbirth_txt"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/signup_btn"
        android:layout_width="155dp"
        android:layout_height="56dp"
        android:text="@string/sign_up123"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/agree"
        app:layout_constraintVertical_bias="0.45" />

    <EditText
        android:id="@+id/dateofbirth_txt"
        android:layout_width="249dp"
        android:layout_height="47dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.629"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"
        android:importantForAutofill="no" />

    <ImageView
        android:id="@+id/dateofbirth_logo"
        android:layout_width="45dp"
        android:layout_height="43dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/dateofbirth_txt"
        app:layout_constraintHorizontal_bias="0.923"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.004"
        app:srcCompat="@drawable/date_of_birth"
        android:contentDescription="@string/zxcvb" />

</androidx.constraintlayout.widget.ConstraintLayout>